Added icon, name and favicon

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     <title>Status Page</title>
 
     <link rel="stylesheet" href="/assets/css/index.css">
+    <link rel="shortcut icon" href="https://www.sharme.eu/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <header>
         <div id="header">
+            <img src="https://www.sharme.eu/assets/images/sharme-orange.png" alt="" id="logo">
+            <hr id="separator">
+            <p id="name">Status Page</p>
             <div id="global-s-container" status="unknown">
                 <div id="status"></div>
                 <p id="title">
@@ -20,7 +24,7 @@
                     Welcome aboard,<br> All systems
                     <status></status>.
                 </p>
-                <div id="lastupdate">Last updated <time id="lastupdated" type="T"></time><br>Next update <time id="nextupdate" type="R"></time></div>
+                <div id="lastupdate">Last updated <time id="lastupdated" type="T">00:00:00</time><br>Next update <time id="nextupdate" type="R">in 0 seconds</time></div>
             </div>
         </div>
     </header>
